--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta name="verdantwolf13">
-    <title>VerdantWolf13</title>
+    <title>verdantwolf13.github.io</title>
 	<link rel="stylesheet" href="app.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
     </a>
     <a href="projects.html">
         <p>
-            projects
+            videos
         </p>
     </a>
 	
