--- a/projects.html
+++ b/projects.html
@@ -2,13 +2,13 @@
 <head>
     <meta name="my projects">
     <link rel="stylesheet" href="app.css">
-    <title>VerdantWolf13</title>
+    <title>verdantwolf13.github.io - videos</title>
 </head>
 <body>
-    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/-bIH1_TgLKQ?si=T7sZugAzGKBhc2M_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </a>
     <h1>
-        My projects
+        My videos
     </h1>
     <a href="https://youtube.com/@verdantwolf13pc">
         <p>
